# cpplogger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
src/: CMakeLists.txt  logger.hpp
src/CppLogger/: CMakeLists.txt  concepts.hpp  functors.hpp  logger.hpp  message.hpp
tests/: CMakeLists.txt  clitest.cpp
tests/Fixtures/: CMakeLists.txt  DefaultImpl.hpp  tempfiles.hpp
tests/auto/: CMakeLists.txt  TestFileLog.cpp  TestFileLog.hpp  sanedefaults.cpp
